--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          correct dist name (oops!  thanks for noticing, mst)
 
 0.100470  2010-02-16 12:29:18 America/New_York
           first release
