--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          bugfixes for accessors in subclasses (thanks, Karen Etheridge and
+          Jesse Luehrs!)
 
 0.200000  2011-04-06 22:06:48 America/New_York
           more Moose 2.x bugfixes and tests (thanks Jesse Luehrs!)
