--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          update author email contact info
 
 0.200002  2013-10-05 09:10:57 America/New_York
           add a test for the bugfix in 0.200001 (thanks, Karen Etheridge)
